<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon_details_height">Height:</string>
    <string name="pokemon_details_weight">Weight:</string>
    <string name="pokemon_details_type">Type:</string>
    <string name="poke_details_stats_attack">Attack:</string>
    <string name="poke_details_stats_defense">Defense:</string>
    <string name="poke_details_stats_hp">Hp:</string>
    <string name="poke_details_image_content_desc">Pokemon image</string>
    <string name="poke_details_general_label">General Info</string>
    <string name="poke_details_stats_label">Stats</string>
    <string name="error_action_retry">Повторить</string>
    <string name="error_message_title">Произошла ошибка</string>
</resources>